@@ -3,6 +3,7 @@ package com.nhnacademy.insightonfront.domain.groupregistration.service;
 import com.nhnacademy.insightonfront.adapter.core.groupregistration.GroupRegistrationClient;
 import com.nhnacademy.insightonfront.adapter.core.groupregistration.dto.GroupRegistrationResponse;
 import com.nhnacademy.insightonfront.common.dto.PageResponse;
+import feign.FeignException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -18,8 +19,19 @@ public class GroupRegistrationStatusService {
 
     private final GroupRegistrationClient groupRegistrationClient;
 
+    /** 사용자의 최신 그룹 신청 내역을 반환. 신청 이력이 없으면(404) null. */
     public GroupRegistrationResponse findLatest(Long userId) {
-        PageResponse<GroupRegistrationResponse> page = groupRegistrationClient.getMyGroupRegistrations(userId, 0, 1);
-        return page.content().isEmpty() ? null : page.content().getFirst();
+        try {
+            PageResponse<GroupRegistrationResponse> page =
+                    groupRegistrationClient.getMyGroupRegistrations(userId, 0, 1);
+
+            if (page == null || page.content() == null || page.content().isEmpty()) {
+                return null;
+            }
+            return page.content().get(0);
+
+        } catch (FeignException.NotFound e) {
+            return null;   // ★ 신청 이력 없음 → null (에러 아님)
+        }
     }
 }
